# multiplayer_shooter

./: Cargo.toml  README.md
src/: custom_ws.rs  main.rs  physics_engine.rs  state.rs
static/: game.html  game.js  graphics.js  index.css  index.html  index.js  settings.js  settings.json
www/: graphics.js  index.html  index.js
