[package]
name = "multiplayer_shooter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-files = "0.6.0"
actix-web = "4.0.1"
dashmap = "5.3.3"
actix-web-actors = "4.1.0"
rapier2d = { version = "0.12.0", features = [ "simd-stable" ] }
